s043818/3step/nginx12_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test-1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ingress-test-1
    spec:
      volumes:
      - name: config
        configMap:
          name: ingress-test-1
      containers:
      - image: nginx:1.12
        name: ingress-test-1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/
