s043818/3step/nginx13_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ingress-test-2
  type: NodePort
...
